tests/reject/anonymous_axiom.alg
sort S;
var x : S;
axiom x = x;
